--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "com.gameframework.unity.protocol.protobuf",
-  "displayName": "GameFramework.Protocol.Protobuf",
+  "name": "com.gameframework.unity.module.protocol.protobuf",
+  "displayName": "GameFramework.Module.Protocol.Protobuf",
   "description": "The Protocol.Protobuf module package for GameFramework",
   "version": "1.0.0",
   "unity": "2018.3",
@@ -10,12 +10,12 @@
   "author": {
     "name": "hurley",
     "email": "yoseasoft@163.com",
-    "url": "https://github.com/yoseasoft/com.gameframework.unity.protocol.protobuf"
+    "url": "https://github.com/yoseasoft/com.gameframework.unity.module.protocol.protobuf"
   },
   "repository": {
-    "name": "com.novaframework.unity.protobuf",
+    "name": "com.gameframework.unity.module.protocol.protobuf",
     "type": "git",
-    "url": "https://github.com/yoseasoft/com.gameframework.unity.protocol.protobuf"
+    "url": "https://github.com/yoseasoft/com.gameframework.unity.module.protocol.protobuf.git"
   },
   "relatedPackages": {},
   "dependencies": {}
